@@ -17,6 +17,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  libxslt1-dev,
  libossp-uuid-dev,
  python-dev,
+ python3-dev,
  jade,
  gettext,
  hardening-wrapper
@@ -287,6 +288,21 @@ Description: PL/Python procedural language for PostgreSQL 9.1
  PL/Python enables an SQL developer to write procedural language functions
  for PostgreSQL 9.1 in Python.  You need this package if you have any
  PostgreSQL 9.1 functions that use the languages plpython or plpythonu.
+ .
+ PostgreSQL is an object-relational SQL database management system.
+
+Package: postgresql-plpython3-9.1
+Architecture: any
+Depends: ${misc:Depends},
+ ${shlibs:Depends},
+ postgresql-9.1 (= ${binary:Version})
+Replaces: postgresql-plpython-9.1 (<< 9.1.1-2~)
+Breaks: postgresql-plpython-9.1 (<< 9.1.1-2~)
+Provides: postgresql-plpython3
+Description: PL/Python 3 procedural language for PostgreSQL 9.1
+ PL/Python 3 enables an SQL developer to write procedural language functions
+ for PostgreSQL 9.1 in Python 3.  You need this package if you have any
+ PostgreSQL 9.1 functions that use the languages plpython3 or plpython3u.
  .
  PostgreSQL is an object-relational SQL database management system.
 
