@@ -1,2 +1,2 @@
-usr/share/doc/postgresql/html usr/share/doc/postgresql-doc-9.1/
+usr/share/doc/postgresql-doc-9.1/html
 usr/share/postgresql/9.1/man/man3/
