@@ -1,3 +1,4 @@
-usr/lib/postgresql/9.1/lib/plpython*.so
+usr/lib/postgresql/9.1/lib/plpython2.so
 /usr/share/locale/*/*/plpython-*.mo
-usr/share/postgresql/9.1/extension/plpython*
+usr/share/postgresql/9.1/extension/plpythonu*
+usr/share/postgresql/9.1/extension/plpython2u*
