@@ -1,0 +1,2 @@
+usr/lib/postgresql/9.1/lib/plpython3.so
+usr/share/postgresql/9.1/extension/plpython3*
